[tool.poetry]
name = "cloud-path"
version = "0.1.0"
description = "An extension of the pathlib Path class for fsspec filesystems"
authors = ["joshicola <joshuajacobs@flywheel.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fsspec = "^2024.9.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
