[tool.poetry]
name = "cloud-path"
version = "0.1.0"
description = "An extension of the pathlib Path class for fsspec filesystems"
authors = ["joshicola <joshuajacobs@flywheel.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fsspec = "^2024.9.0"
tornado = ">=6.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
jupyter = "^1.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
